fix: font size technologies section small display

--- a/portifolio_v.1.0/src/styles/components/technologiescontainer.sass
+++ b/portifolio_v.1.0/src/styles/components/technologiescontainer.sass
@@ -72,7 +72,7 @@
       .technology-card
         h3
           margin-bottom: 0rem
-          font-size: 0.5rem
+          font-size: 0.6rem !important
           text-align: center
 
         svg
